--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>JS - Zajęcia #</title>
+  <title>JS - Zajęcia 20</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,13 +28,19 @@
 
 <body>
 <header>
-  <h1 class="page-title">JS - Zajęcia #</h1>
+  <h1 class="page-title">JS - Zajęcia 20 - Paginacja</h1>
 </header>
 
 <nav>
   <ul>
-    <li><a href="topics/00-myTopic/00-myTopic.html">00 -
-      My Topic</a>
+    <li><a href="topics/01-elements-count/01-elements-count.html">01 -
+      Liczba elementów odpowiedzi</a>
+    </li>
+    <li><a href="topics/02-elements-group-number/02-elements-group-number.html">02 -
+      Numer grupy elementów</a>
+    </li>
+    <li><a href="topics/03-load-more/03-load-more.html">03 -
+      Technika „Załaduj więcej”</a>
     </li>
   </ul>
 
