--- a/topics/01-elements-count/01-elements-count.html
+++ b/topics/01-elements-count/01-elements-count.html
@@ -5,19 +5,19 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>01-addEventListener</title>
+  <title>Liczba elementów odpowiedzi</title>
 
   <link rel="stylesheet" href="../../css/normalize.css">
   <link rel="stylesheet" href="../../css/main.css">
   <link rel="stylesheet" href="../../css/boxsizing.css">
   <link rel="stylesheet" href="../../css/styles.css">
 
-  <script src="00-myTopic.js" defer></script>
+  <script src="./01-elements-count.js" defer></script>
 </head>
 <body>
 
 <header class="header">
-  <h2 class="title">00 <code>myTopic</code></h2>
+  <h2 class="title">Liczba elementów odpowiedzi</h2>
 </header>
 <nav>
   <ul class="go-back">
@@ -26,7 +26,8 @@
 </nav>
 
 <div class="container">
-  <button id="single" class="btn-center btn btn-indigo">Click me!</button>
+  <button type="button" class="btn-center btn btn-indigo">Fetch posts</button>
+  <ul class="posts"></ul>
 </div>
 
 </body>
